# bus-tracker

./: .env.example  .gitignore  AGENTS.md  ISSUES.md  ISSUES_DAG.md  PLAN.md  README.md  SKELETON.md  docker-compose.yml
.github/workflows/: ci.yml
.hermes/: config.yaml  task-graph.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/api/: routes.py
backend/app/: main.py
backend/core/: config.py
backend/services/: cache.py  departure_query.py  geo_query.py  gtfs_alerts.py  gtfs_db.py  gtfs_realtime.py  gtfs_static.py  http_client.py
backend/tests/: test_api.py  test_gtfs_db.py  test_gtfs_realtime.py  test_gtfs_static.py  test_gtfs_static_cached.py
docs/: architecture.md
frontend/: .eslintrc.cjs  .prettierrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: App.test.tsx  NearbyStopsPanel.test.tsx  mappers.test.ts  useNearbyStops.test.tsx  useRoutes.test.tsx  useVehicleArrivals.test.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AlertsPanel.tsx  ErrorBoundary.tsx  MapBindings.tsx  MapView.tsx  NearbyStopsPanel.tsx  RouteListPanel.tsx  SelectedVehicleMarker.tsx  Sidebar.tsx  Skeleton.tsx  StopDeparturesPanel.tsx  StopMarker.tsx  TripStopMarker.tsx  TripTimelinePanel.tsx  UserMarker.tsx  VehicleMarker.tsx
frontend/src/hooks/: useAlerts.ts  useNearbyStops.ts  useRoutes.ts  useStopDepartures.ts  useStopSearch.ts  useVehicleArrivals.ts  (+2 more)
scripts/: dev.md
