[project]
name = "bus-tracker-backend"
version = "0.1.0"
description = "Backend for bus tracker"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "httpx==0.27.2",
  "gtfs-realtime-bindings==1.0.0",
  "aiosqlite==0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "ruff==0.6.4",
  "black==24.8.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]
ignore = ["E501"]
